--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   firebase_core: ^3.6.0
   firebase_analytics: ^11.0.0
   firebase_messaging: ^15.0.0
+  
+  firebase_in_app_messaging: ^0.8.1+10
+
   flutter_local_notifications: ^17.2.1
   
 
